stop justifying text on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,10 @@ p {
 
 /* MOBILE */
 @media screen and (max-width: 800px) {
+  p {
+    text-align: left;
+  }
+  
   .main-content {
     margin-left: 0;
     padding: 25px;
